data/derived/sp14/progs/unify/prog0827.ml.out
Characters 120-141:
  List.fold_left f base ;;
  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
